welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: Unit does not take parameters
    else(){
          ^